;;-------------------------------------------
;;
;; Gavin Gray 01.2022
;;
;; GScheme
;;
;;-------------------------------------------

(env
  (dev
    (flags (:standard -warn-error -A -w -27))))

(library
 (name gscm)
 (libraries angstrom)
 (modules eval parser types util namespace box
          expander_old ;; omit new expander
 )
 (inline_tests)
 (preprocess (pps ppx_inline_test ppx_let)))
