;;-------------------------------------------
;;
;; Gavin Gray 02.2022
;;
;; GScheme
;;
;;-------------------------------------------

(env
  (dev
    (flags (:standard -warn-error -A -w -27))))

(library
 (name gscm)
 (libraries angstrom str)
 (modules eval parser types util namespace box lib cfg terminal
          ;; The following were added for the new expander
          syntax
          scope
          binding
          match
          core
          compile
          expander
          expand_expr
          expand_main
 )
 (inline_tests)
 (preprocess (pps ppx_inline_test ppx_let)))
